# gcal-notion-sync

./: .gitignore  gcalendar.py  main.py  pyproject.toml
